[package]
name = "rush"
version = "0.2.0"
authors = ["Patrik Cyvoct <patrik.cyvoct@gmail.com>"]

[dependencies]
rustyline = "1.0.0"
ansi_term = "0.9"
shellexpand = "1.0.0"
nix = { git = "https://github.com/nix-rust/nix"}
exec = "0.2.0"
chan-signal = "0.2.0"
lazy_static = "0.2.2"

[lib]
doc = true
name = "rushlib"
path = "src/lib.rs"
